# Bandage

./: CMakeLists.txt  setup_paths.sh
Basic/: .FatPointers.cpp.swo  ArrayAccessTransform.cpp  ArrayAccessTransform.hpp  CMakeLists.txt  FatPointer.cpp  FatPointer.h  FatPointers.cpp  FatPointers.hpp  FunctionDuplicater.cpp  FunctionDuplicater.hpp  Helpers.cpp  Helpers.hpp  InstructionCollection.cpp  InstructionCollection.hpp  Pass.cpp  PointerAllocaTransform.cpp  PointerAllocaTransform.hpp  PointerUse.cpp  PointerUse.hpp  PointerUseCollection.cpp  PointerUseCollection.hpp  PointerUseTransform.cpp  PointerUseTransform.hpp  Transform.cpp  Transform.hpp  TypeDuplicater.cpp  TypeDuplicater.hpp
Helpers/: Helpers.cpp  Helpers.h
ListFuncs/: CMakeLists.txt  Pass.cpp
Performance/: A00-Creation.c  Alloca.c  ArrayCreation.c  ArrayWrites.c  B00-LinkedList.c  FitInCache.c  LinkedList.c  MallocAndFree.c  MultiTypeArrayCreation.c  PointerAlloc.c  PointerAssignment.c  SafePointerDeref.c  TreeAdd.c  UnsafePointerDeref.c  eval.sh  runOn.sh  xc.sh
PointerAnalysis/: CMakeLists.txt  Constraints.cpp  Constraints.hpp  Pass.cpp  Pass.hpp  Pointer.cpp  Pointer.hpp
SoftBound/: BoundsChecks.cpp  BoundsChecks.hpp  BoundsSetter.cpp  BoundsSetter.hpp  CMakeLists.txt  CallModifier.cpp  CallModifier.hpp  FunctionDuplicater.cpp  FunctionDuplicater.hpp  HeapBounds.cpp  HeapBounds.hpp  LocalBounds.cpp  LocalBounds.hpp  Pass.cpp  PointerReturn.cpp  PointerReturn.hpp
Tests/: .gitignore  A00-CreateArray.c  A02-SetArray.c  A03-SetAndReadArray.c  A05-SetAndReadMultidimensionalArray.c  A1-ReadArray.c  (+79 more)
(+37 files in other folders)
